syntax = "proto3";

option csharp_namespace = "GrpcProductServer.Protos";

package product;

service ProductService {
  rpc GetProductById (ProductRequest) returns (ProductExistResponse);
  rpc CreateProduct (Product) returns (ProductResponse);
  rpc UpdateProduct (Product) returns (ProductResponse);
  rpc AddBulkProducts (stream Product) returns (BulkProductResponse);
}

message ProductRequest {
  int32 id = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message ProductExistResponse {
  bool exists = 1;
}

message ProductResponse {
  bool success = 1;
  string message = 2;
}
message BulkProductResponse {
  int32 count = 1;
}